# mic

./: .gitignore  Cargo.toml  README.md  compete.toml
.github/workflows/: ci.yml
examples/: atcoder-abc188-a.rs
mic_impl/: Cargo.toml  README.md
mic_impl/src/: lib.rs
src/: filters.rs  lib.rs
tests/: recursion.rs
ui-tests/: Cargo.toml
ui-tests/tests/: ui.rs
ui-tests/tests/fail/: inferred-recursive.rs  inferred-recursive.stderr  invalid-args.rs  invalid-args.stderr  type-error.rs  type-error.stderr  wrong-macro.rs  wrong-macro.stderr
