[package]
name = "mic_impl"
version = "0.1.0"
edition = "2018"
license = "CC0-1.0"
description = "Implementation for `mic` crate."
repository = "https://github.com/qryxip/mic"
keywords = ["internal"]
categories = []

[lib]
proc-macro = true

[dependencies]
itertools = "0.10.1"
proc-macro2 = "1.0.9"
quote = "1.0.3"
syn = { version = "1.0.17", features = ["extra-traits", "full"] }
